Add async method level before hook. Extend async before tests
'describe_method_level_befores' actually seems to test only
context-level befores. Anyway it has been doubled for the async case,
thus extending tests on context-level asyncBefore.
The only tests actually related to context-level befores seems to be in
'when_async_method_level_before_contains_exception'. That's a
'before_each' case, and is actually excercising
ClassContext.BuildMethodLevelBefore

--- a/NSpec/NSpec.csproj
+++ b/NSpec/NSpec.csproj
@@ -53,6 +53,7 @@
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="Domain\AsyncActionRegister.cs" />
+    <Compile Include="Domain\AsyncMethodLevelBefore.cs" />
     <Compile Include="Domain\ClassContext.cs" />
     <Compile Include="Domain\AsyncExample.cs" />
     <Compile Include="Domain\ExampleBase.cs" />
