--- a/NSpecSpecs/NSpecSpecs.csproj
+++ b/NSpecSpecs/NSpecSpecs.csproj
@@ -80,8 +80,14 @@
     <Compile Include="describe_RunningSpecs\describe_async_before.cs" />
     <Compile Include="describe_RunningSpecs\describe_async_method_level_examples.cs" />
     <Compile Include="describe_RunningSpecs\describe_async_method_level_befores.cs" />
+    <Compile Include="describe_RunningSpecs\describe_before_and_after\async_abstract_class.cs" />
     <Compile Include="describe_RunningSpecs\describe_before_and_after\async_before_and_after.cs" />
     <Compile Include="describe_RunningSpecs\describe_before_and_after\async_middle_abstract.cs" />
+    <Compile Include="describe_RunningSpecs\describe_before_and_after\async_class_levels_and_context_methods.cs" />
+    <Compile Include="describe_RunningSpecs\describe_before_and_after\async_inheritance.cs" />
+    <Compile Include="describe_RunningSpecs\describe_before_and_after\async_nested_contexts.cs" />
+    <Compile Include="describe_RunningSpecs\describe_before_and_after\async_class_levels.cs" />
+    <Compile Include="describe_RunningSpecs\describe_before_and_after\async_when_there_are_no_specs.cs" />
     <Compile Include="describe_RunningSpecs\describe_skipped_before_alls_when_excluded_by_tag.cs" />
     <Compile Include="describe_RunningSpecs\describe_before_and_after\abstract_class.cs" />
     <Compile Include="describe_RunningSpecs\describe_before_and_after\nested_contexts.cs" />
