--- a/NSpecSpecs/NSpecSpecs.csproj
+++ b/NSpecSpecs/NSpecSpecs.csproj
@@ -77,6 +77,7 @@
     <Compile Include="describe_Conventions.cs" />
     <Compile Include="describe_output.cs" />
     <Compile Include="describe_RunningSpecs\describe_async_after.cs" />
+    <Compile Include="describe_RunningSpecs\describe_async_method_level_after_all.cs" />
     <Compile Include="describe_RunningSpecs\describe_async_method_level_after.cs" />
     <Compile Include="describe_RunningSpecs\describe_async_method_level_before_all.cs" />
     <Compile Include="describe_RunningSpecs\describe_async_method_level_before.cs" />
