--- a/NSpecSpecs/NSpecSpecs.csproj
+++ b/NSpecSpecs/NSpecSpecs.csproj
@@ -78,6 +78,7 @@
     <Compile Include="describe_output.cs" />
     <Compile Include="describe_RunningSpecs\describe_async_after_all.cs" />
     <Compile Include="describe_RunningSpecs\describe_async_after.cs" />
+    <Compile Include="describe_RunningSpecs\describe_async_act.cs" />
     <Compile Include="describe_RunningSpecs\describe_async_method_level_after_all.cs" />
     <Compile Include="describe_RunningSpecs\describe_async_method_level_after.cs" />
     <Compile Include="describe_RunningSpecs\describe_async_method_level_before_all.cs" />
