--- a/NSpecSpecs/NSpecSpecs.csproj
+++ b/NSpecSpecs/NSpecSpecs.csproj
@@ -76,6 +76,26 @@
     <Compile Include="describe_cecil.cs" />
     <Compile Include="describe_Conventions.cs" />
     <Compile Include="describe_output.cs" />
+    <Compile Include="describe_RunningSpecs\describe_async_after_all.cs" />
+    <Compile Include="describe_RunningSpecs\describe_async_after.cs" />
+    <Compile Include="describe_RunningSpecs\describe_async_act.cs" />
+    <Compile Include="describe_RunningSpecs\describe_async_method_level_after_all.cs" />
+    <Compile Include="describe_RunningSpecs\describe_async_method_level_after.cs" />
+    <Compile Include="describe_RunningSpecs\describe_async_method_level_act.cs" />
+    <Compile Include="describe_RunningSpecs\describe_async_method_level_before_all.cs" />
+    <Compile Include="describe_RunningSpecs\describe_async_method_level_before.cs" />
+    <Compile Include="describe_RunningSpecs\describe_async_before_all.cs" />
+    <Compile Include="describe_RunningSpecs\describe_async_example.cs" />
+    <Compile Include="describe_RunningSpecs\describe_async_before.cs" />
+    <Compile Include="describe_RunningSpecs\describe_async_method_level_examples.cs" />
+    <Compile Include="describe_RunningSpecs\describe_before_and_after\async_abstract_class.cs" />
+    <Compile Include="describe_RunningSpecs\describe_before_and_after\async_before_and_after.cs" />
+    <Compile Include="describe_RunningSpecs\describe_before_and_after\async_middle_abstract.cs" />
+    <Compile Include="describe_RunningSpecs\describe_before_and_after\async_class_levels_and_context_methods.cs" />
+    <Compile Include="describe_RunningSpecs\describe_before_and_after\async_inheritance.cs" />
+    <Compile Include="describe_RunningSpecs\describe_before_and_after\async_nested_contexts.cs" />
+    <Compile Include="describe_RunningSpecs\describe_before_and_after\async_class_levels.cs" />
+    <Compile Include="describe_RunningSpecs\describe_before_and_after\async_when_there_are_no_specs.cs" />
     <Compile Include="describe_RunningSpecs\describe_method_level_afters.cs" />
     <Compile Include="describe_RunningSpecs\describe_skipped_before_alls_when_excluded_by_tag.cs" />
     <Compile Include="describe_RunningSpecs\describe_before_and_after\abstract_class.cs" />
@@ -107,12 +127,18 @@
     <Compile Include="describe_DomainExtensions.cs" />
     <Compile Include="describe_RunningSpecs\describe_action_indexer_add_operator.cs" />
     <Compile Include="describe_Context.cs" />
-    <Compile Include="describe_Example.cs" />
+    <Compile Include="describe_ExampleBase.cs" />
     <Compile Include="describe_RunningSpecs\Exceptions\describe_expected_exception.cs" />
     <Compile Include="describe_RunningSpecs\describe_implicit_befores.cs" />
     <Compile Include="describe_RunningSpecs\describe_todo.cs" />
     <Compile Include="describe_ContextCollection.cs" />
     <Compile Include="describe_DefaultConventions.cs" />
+    <Compile Include="describe_RunningSpecs\Exceptions\when_async_act_contains_exception.cs" />
+    <Compile Include="describe_RunningSpecs\Exceptions\when_async_after_contains_exception.cs" />
+    <Compile Include="describe_RunningSpecs\Exceptions\when_async_before_contains_exception.cs" />
+    <Compile Include="describe_RunningSpecs\Exceptions\when_async_method_level_before_contains_exception.cs" />
+    <Compile Include="describe_RunningSpecs\when_describing_async_hooks.cs" />
+    <Compile Include="ExampleBaseWrap.cs" />
     <Compile Include="SpecExtensions.cs" />
     <Compile Include="describe_RunningSpecs\Exceptions\when_method_level_before_contains_exception.cs" />
     <Compile Include="describe_Tags.cs" />
