--- a/SampleSpecs/SampleSpecs.csproj
+++ b/SampleSpecs/SampleSpecs.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Bug\grandparents_run_first.cs" />
     <Compile Include="Demo\before_each_on_the_class_level.cs" />
     <Compile Include="Demo\describe_a_finished_TicTacToeGame.cs" />
+    <Compile Include="Demo\describe_execution_order.cs" />
     <Compile Include="Demo\describe_Extensions.cs" />
     <Compile Include="Demo\describe_shoulds.cs" />
     <Compile Include="Demo\describe_tags.cs" />
