--- a/NSpec/NSpec.csproj
+++ b/NSpec/NSpec.csproj
@@ -63,7 +63,8 @@
     <Compile Include="Domain\ContextBuilder.cs" />
     <Compile Include="Conventions.cs" />
     <Compile Include="Domain\Formatters\HtmlFormatter.cs" />
-    <Compile Include="Domain\Formatters\IFormatter.cs" />
+    <Compile Include="Domain\Formatters\IFormatters.cs" />
+    <Compile Include="Domain\Formatters\SilentLiveFormatter.cs" />
     <Compile Include="Domain\Formatters\TiddlyWikiFormatter.cs" />
     <Compile Include="Domain\Extensions\DomainExtensions.cs" />
     <Compile Include="Domain\Formatters\XmlFormatter.cs" />
