feat(context): wrap exception from bare code with specific...
... exception, to explain user what just happened and suggest how to
improve.

--- a/NSpec/NSpec.csproj
+++ b/NSpec/NSpec.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Domain\AsyncMethodLevelHooks.cs" />
     <Compile Include="Domain\ClassContext.cs" />
     <Compile Include="Domain\AsyncExample.cs" />
+    <Compile Include="Domain\ContextBareCodeException.cs" />
     <Compile Include="Domain\ExampleBase.cs" />
     <Compile Include="Domain\ExampleFailureException.cs" />
     <Compile Include="Domain\Formatters\ConsoleFormatter.cs" />
