--- a/NSpec/NSpec.csproj
+++ b/NSpec/NSpec.csproj
@@ -53,6 +53,7 @@
     </Compile>
     <Compile Include="Domain\AsyncActionRegister.cs" />
     <Compile Include="Domain\AsyncMethodLevelHooks.cs" />
+    <Compile Include="Domain\AsyncMismatchException.cs" />
     <Compile Include="Domain\ClassContext.cs" />
     <Compile Include="Domain\AsyncExample.cs" />
     <Compile Include="Domain\ContextBareCodeException.cs" />
