--- a/NSpecSpecs/NSpecSpecs.csproj
+++ b/NSpecSpecs/NSpecSpecs.csproj
@@ -140,6 +140,7 @@
     <Compile Include="describe_RunningSpecs\Exceptions\when_async_before_contains_exception.cs" />
     <Compile Include="describe_RunningSpecs\Exceptions\when_async_method_level_before_contains_exception.cs" />
     <Compile Include="describe_RunningSpecs\Exceptions\when_method_level_context_contains_exception.cs" />
+    <Compile Include="describe_RunningSpecs\Exceptions\when_spec_class_ctor_contains_exception.cs" />
     <Compile Include="describe_RunningSpecs\Exceptions\when_sub_context_contains_exception.cs" />
     <Compile Include="describe_RunningSpecs\when_describing_async_hooks.cs" />
     <Compile Include="ExampleBaseWrap.cs" />
