--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 *~
 *.swp
-*/bin
-*/obj
+**/bin
+**/obj
 *.bak
 *.*scc
 *.user
@@ -14,20 +14,22 @@ obj
 *_ReSharper*
 *.trx
 *.patch
-TestResult.xml
+**/TestResult.xml
 new.html
 source.html
 *.nupkg
 *.zip
-*crunchsolution.cache*
-*.ncrunchproject
-*.ncrunchsolution
+**/*crunchsolution.cache*
+**/*.crunchproject.local.xml
+**/*.crunchsolution.local.xml
+**/*.ncrunchproject
+**/*.ncrunchsolution
+*.userprefs
 Gemfile.lock
 packages/*
 icarus.gallio
 _site
 *.#*
 TAGS
-TestResults/*.mdf
-TestResults/*.ldf
-.vscode/
+**/TestResults/
+**/.vscode/
