feat(sample): delete local packages after changes

--- a/sln/src/DotnetTestNSpec/project.json
+++ b/sln/src/DotnetTestNSpec/project.json
@@ -26,5 +26,11 @@
     },
     "net452": {
     }
+  },
+
+  "scripts": {
+    "postcompile": [
+      "../../../scripts/delete-local-package.bat %project:Name%"
+    ]
   }
 }
