--- a/sln/src/NSpec/project.json
+++ b/sln/src/NSpec/project.json
@@ -31,5 +31,11 @@
         "System.Web": ""
       }
     }
+  },
+
+  "scripts": {
+    "postcompile": [
+      "../../../scripts/delete-local-package.bat %project:Name%"
+    ]
   }
 }
