--- a/sln/src/NSpec/project.lock.json
+++ b/sln/src/NSpec/project.lock.json
@@ -668,7 +668,7 @@
           "System.Runtime": "4.1.0"
         },
         "compile": {
-          "ref/netstandard1.5/_._": {}
+          "ref/netstandard1.5/System.Reflection.TypeExtensions.dll": {}
         },
         "runtime": {
           "lib/netstandard1.5/System.Reflection.TypeExtensions.dll": {}
@@ -4516,6 +4516,7 @@
     ],
     ".NETStandard,Version=v1.6": [
       "NETStandard.Library >= 1.6.0",
+      "System.Reflection.TypeExtensions >= 4.1.0",
       "System.Runtime.Loader >= 4.0.0",
       "System.Runtime.Serialization.Xml >= 4.1.1",
       "System.Text.Encodings.Web >= 4.0.0"
