--- a/sln/src/NSpecRunner/project.lock.json
+++ b/sln/src/NSpecRunner/project.lock.json
@@ -1472,10 +1472,10 @@
           "System.Runtime": "4.1.0"
         },
         "compile": {
-          "ref/netstandard1.5/System.Runtime.Loader.dll": {}
+          "ref/netstandard1.5/_._": {}
         },
         "runtime": {
-          "lib/netstandard1.5/System.Runtime.Loader.dll": {}
+          "lib/netstandard1.5/_._": {}
         }
       },
       "System.Runtime.Numerics/4.0.1": {
@@ -2155,7 +2155,6 @@
           "NETStandard.Library": "1.6.0",
           "NUnit": "3.4.1",
           "System.Reflection.TypeExtensions": "4.1.0",
-          "System.Runtime.Loader": "4.0.0",
           "System.Runtime.Serialization.Xml": "4.1.1",
           "System.Text.Encodings.Web": "4.0.0"
         },
