chore(samples): pick local packages from where they're built

--- a/sln/test/Samples/DotNetTestSample/NuGet.Config
+++ b/sln/test/Samples/DotNetTestSample/NuGet.Config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
-    <add key="local repo" value="..\LocalNugetRepo\" />
+    <add key="local NSpec" value="..\..\..\src\NSpec\bin\Debug\" />
+    <add key="local DotNetTestNSpec" value="..\..\..\src\DotNetTestNSpec\bin\Debug\" />
   </packageSources>
   <activePackageSource>
     <add key="All" value="(Aggregate source)"  />
