--- a/sln/nspec.nuspec
+++ b/sln/nspec.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
-    <id>nspec</id>
+    <id>NSpec</id>
     <version>1.1.0</version>
     <iconUrl>http://nspec.org/images/logo.png</iconUrl>
     <licenseUrl>https://github.com/mattflo/NSpec/blob/master/license.txt</licenseUrl>
@@ -9,13 +9,14 @@
     <owners>Matt Florence, Amir Rajan</owners>
     <projectUrl>http://www.nspec.org</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>NSpec is a BDD (Behavior Driven Development) framework for .NET of the xSpec (Context/Specification) flavor. NSpec is intended to drive development by specifying behavior within a declared context. NSpec is heavily inspired by RSpec and build upon the NUnit assertion library.</description>
+    <summary>NSpec is a testing framework for .NET. NSpec is heavily inspired by RSpec and Mocha.</summary>
+    <description>NSpec is a BDD (Behavior Driven Development)-style testing framework for .NET. NSpec is intended to drive development by specifying behavior within a context or scenario. NSpec belongs to the xSpec (Context/Specification) family and is heavily inspired by RSpec and Mocha.</description>
     <language>en-US</language>
-    <tags>testing bdd tdd rspec</tags>
+    <tags>testing bdd tdd rspec mocha</tags>
   </metadata>
   <files>
-    <file src="src\NSpecRunner\bin\Debug\*.*" target="tools/"/>
-    <file src="src\NSpec\bin\Debug\*.*" target="lib\"/>
+    <file src="src\NSpec\bin\Debug\**" target="lib\"/>
+    <file src="src\NSpecRunner\bin\Debug\**" target="tools\"/>
     <file src="test\NSpecSpecs\DebuggerShim.cs" target="content\DebuggerShim.cs"/>
   </files>
 </package>
