--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,5 @@
-﻿###pull_requests:
+﻿version: '{build}'
+###pull_requests:
 ###  do_not_increment_build_number: true
 branches:
   only:
@@ -14,7 +15,6 @@ artifacts:
 deploy:
 - provider: NuGet
   name: Development
-  version: 'dev-{build}'
   server: https://www.myget.org/F/nspec/api/v2/package
   api_key:
     secure: fLdJBSqSl6dP8rxk7vNJMYQxGchdEfMpOSF0DxKJJMmyfMaW+0Gx139YA3QxwXWm
@@ -23,7 +23,6 @@ deploy:
     branch: master
 - provider: NuGet
   name: Production
-  version: '{build}'
   api_key:
     secure: yC++3vJi0VQue3koutRC6PWdbN1uuXqXYvaAZTA3SZq6UKuJP5hKx6JhgkdOI8/M
   on:
