fix(samples): take nspec package from MyGet CI feed

--- a/sln/test/Samples/DotNetTestSample/NuGet.Config
+++ b/sln/test/Samples/DotNetTestSample/NuGet.Config
@@ -1,8 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
-    <add key="local NSpec" value="..\..\..\src\NSpec\bin\Debug\" />
-    <add key="local DotNetTestNSpec" value="..\..\..\src\DotNetTestNSpec\bin\Debug\" />
+    <add key="NSpecVNext" value="https://www.myget.org/F/nspec/api/v2/" />
   </packageSources>
   <activePackageSource>
     <add key="All" value="(Aggregate source)"  />
