--- a/sln/src/NSpec/NSpec.nuspec
+++ b/sln/src/NSpec/NSpec.nuspec
@@ -20,8 +20,8 @@
     </contentFiles>
   </metadata>
   <files>
-    <file src="bin\Release\**" target="lib"/>
-    <file src="..\..\src\NSpecRunner\bin\Release\**" target="tools"/>
+    <file src="bin\Release\**" exclude="**\*.pdb;**\*.deps.json" target="lib"/>
+    <file src="..\..\src\NSpecRunner\bin\Release\**" exclude="**\*.pdb;**\*.deps.json;**\*.dev.json;**\win7-x64\*" target="tools"/>
     <file src="..\..\test\NSpecSpecs\DebuggerShim.cs" target="content"/>
   </files>
 </package>
