--- a/sln/src/NSpec/NSpec.nuspec
+++ b/sln/src/NSpec/NSpec.nuspec
@@ -21,7 +21,7 @@
   </metadata>
   <files>
     <file src="bin\Release\**" exclude="**\*.pdb;**\*.deps.json" target="lib"/>
-    <file src="..\..\src\NSpecRunner\bin\Release\**" exclude="**\*.pdb;**\*.deps.json;**\*.dev.json;**\win7-x64\*" target="tools"/>
+    <file src="..\..\src\NSpecRunner\bin\Release\**" exclude="**\*.pdb;**netcore**\*;**\win7-x64\*" target="tools"/>
     <file src="..\..\test\NSpecSpecs\DebuggerShim.cs" target="content"/>
   </files>
 </package>
