--- a/sln/src/DotnetTestNSpec/project.json
+++ b/sln/src/DotnetTestNSpec/project.json
@@ -4,7 +4,7 @@
   "buildOptions": {
     "compile": {
       "includeFiles": [
-        "../../SharedAssemblyInfo.cs"
+        "../../DotNetTestSharedAssemblyInfo.cs"
       ]
     },
     "emitEntryPoint": true,
