--- a/sln/src/DotNetTestNSpec/DotNetTestNSpec.nuspec
+++ b/sln/src/DotNetTestNSpec/DotNetTestNSpec.nuspec
@@ -14,7 +14,7 @@
     <owners>Matt Florence, Amir Rajan, BrainCrumbz</owners>
     <licenseUrl>https://github.com/mattflo/NSpec/blob/master/license.txt</licenseUrl>
     <projectUrl>http://www.nspec.org</projectUrl>
-    <iconUrl>http://nspec.org/assets/images/logo.png</iconUrl>
+    <iconUrl>https://cdn.rawgit.com/mattflo/NSpec/gh-pages/assets/images/logo.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <releaseNotes></releaseNotes>
     <tags>testing bdd tdd rspec mocha dotnet core test</tags>
