--- a/sln/test/Samples/NetFrameworkSample/test/LibrarySpecs/LibrarySpecs.csproj
+++ b/sln/test/Samples/NetFrameworkSample/test/LibrarySpecs/LibrarySpecs.csproj
@@ -36,8 +36,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="NSpec, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\NSpec.1.1.0-dev-19\lib\net452\NSpec.dll</HintPath>
+    <Reference Include="NSpec, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\NSpec.2.0.0\lib\net452\NSpec.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Shouldly, Version=2.8.2.0, Culture=neutral, PublicKeyToken=6042cbcb05cbc941, processorArchitecture=MSIL">
