--- a/sln/test/Samples/NetFrameworkSample/test/LibrarySpecs/packages.config
+++ b/sln/test/Samples/NetFrameworkSample/test/LibrarySpecs/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="NSpec" version="1.1.0-dev-19" targetFramework="net452" />
+  <package id="NSpec" version="2.0.0" targetFramework="net452" />
   <package id="Shouldly" version="2.8.2" targetFramework="net452" />
 </packages>
