chore(assembly): rename shared assembly info file

--- a/sln/src/NSpec/project.json
+++ b/sln/src/NSpec/project.json
@@ -4,7 +4,7 @@
   "buildOptions": {
     "compile": {
       "includeFiles": [
-        "../../LibrarySharedAssemblyInfo.cs"
+        "../../SharedAssemblyInfo.cs"
       ]
     }
   },
