--- a/sln/src/NSpec/project.json
+++ b/sln/src/NSpec/project.json
@@ -10,6 +10,7 @@
   },
 
   "dependencies": {
+    "Microsoft.Extensions.Testing.Abstractions": "1.0.0-preview2-003121",
     "Newtonsoft.Json": "9.0.1"
   },
 
