chore(tools): enable package feed directly in AppVeyor

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,6 +22,8 @@ artifacts:
 - path: sln\src\NSpec\publish\*.nupkg
   name: NSpec
 
+project_feed: true
+
 deploy:
 - provider: NuGet
   name: Development
