--- a/examples/NetFrameworkSample/NuGet.Config
+++ b/examples/NetFrameworkSample/NuGet.Config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
-    <add key="NSpecVNext" value="https://www.myget.org/F/nspec/api/v2/" />
+    <add key="MyGet" value="https://www.myget.org/F/nspec/api/v2/" />
+    <add key="AppVeyor NSpec" value="https://ci.appveyor.com/nuget/nspec-nspec/" />
   </packageSources>
   <activePackageSource>
     <add key="All" value="(Aggregate source)"  />
