--- a/sln/src/NSpec/NSpec.nuspec
+++ b/sln/src/NSpec/NSpec.nuspec
@@ -22,7 +22,7 @@
       <group>
         <dependency id="Newtonsoft.Json" version="9.0.1" />
       </group>
-      <group targetFramework="netstandard">
+      <group targetFramework="netstandard1.6">
         <dependency id="NETStandard.Library" version="1.6.0" />
         <dependency id="System.Reflection.TypeExtensions" version="4.1.0" />
         <dependency id="System.Runtime.Serialization.Xml" version="4.1.1" />
