fix(package): do not pack also dependency DLLs

--- a/sln/src/NSpec/NSpec.nuspec
+++ b/sln/src/NSpec/NSpec.nuspec
@@ -31,7 +31,7 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="bin\Release\**" exclude="**\*.pdb;**\*.deps.json" target="lib"/>
+    <file src="bin\Release\**\NSpec.*" exclude="**\*.pdb;**\*.deps.json" target="lib"/>
     <file src="..\..\src\NSpecRunner\bin\Release\**" exclude="**\*.pdb;**netcore**\*;**\win7-x64\*" target="tools"/>
     <file src="..\..\content\DebuggerShim.cs" target="content"/>
   </files>
