--- a/examples/NetFrameworkSample/test/LibrarySpecs/packages.config
+++ b/examples/NetFrameworkSample/test/LibrarySpecs/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
-  <package id="NSpec" version="3.0.4" targetFramework="net452" />
+  <package id="NSpec" version="3.0.4-dev-27" targetFramework="net452" />
   <package id="Shouldly" version="2.8.2" targetFramework="net452" />
 </packages>
