chore(examples): upgrade to NSpec 3.0.5

--- a/examples/NetFrameworkSample/test/LibrarySpecs/LibrarySpecs.csproj
+++ b/examples/NetFrameworkSample/test/LibrarySpecs/LibrarySpecs.csproj
@@ -71,7 +71,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
