fix(package): NSpecRunner cannot run, NSpec assembly is missing

--- a/sln/src/NSpec/NSpec.nuspec
+++ b/sln/src/NSpec/NSpec.nuspec
@@ -32,7 +32,7 @@
   </metadata>
   <files>
     <file src="bin\$configuration$\**\NSpec.*" exclude="**\*.pdb;**\*.deps.json" target="lib"/>
-    <file src="..\..\src\NSpecRunner\bin\$configuration$\**" exclude="**\*.pdb;**netcore**\*;**\win7-x64\*" target="tools"/>
+    <file src="..\..\src\NSpecRunner\bin\$configuration$\**\win7-x64\NSpec*.*" exclude="**\*.pdb" target="tools"/>
     <file src="..\..\content\DebuggerShim.cs" target="content"/>
   </files>
 </package>
