--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,7 +16,7 @@ skip_commits:
   files: '*.md'
 
 install:
-- ps: sln\Set-BuildNumber.ps1
+- ps: sln\Set-BuildVersion.ps1
 
 build_script:
 - ps: sln\Build-Package.ps1
