chore(appveyor): don't trigger CI build on example changes

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,7 +13,9 @@ shallow_clone: true
 
 skip_commits:
   message: /docs\(.*\):/
-  files: '*.md'
+  files:
+  - '*.md'
+  - 'examples/**'
 
 install:
 - ps: sln\Set-BuildVersion.ps1
