chore(appveyor): don't trigger CI build on example changes #2

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,7 +15,7 @@ skip_commits:
   message: /docs\(.*\):/
   files:
   - '*.md'
-  - 'examples/**'
+  - examples/**
 
 install:
 - ps: sln\Set-BuildVersion.ps1
