chore(tools): exclude bin/obj folders from VS Code

--- a/sln/.vscode/settings.json
+++ b/sln/.vscode/settings.json
@@ -3,6 +3,8 @@
   
   "files.exclude": {
     "packages/**": true,
+    "**/bin/**": true,
+    "**/obj/**": true,
     "**/.git": true,
     "**/.svn": true,
     "**/.hg": true,
